-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9.2
-
None
-
-
af5582c5b (dev), c389f5201 (6.10), 9df7b36f1 (tqtc/lts-6.8), 2192d2cfb (dev), f6ed9fa8a (6.10)
Since I upgraded to Qt6.9.2 I regularly see my HTTP requests fail with error: QNetworkReply::NoError
In my log file I see this:
09-01 19:24:47.661 10707 10801 W qt.network.http2: 19:24:47.662 warning unknown'0 stream 7 error: "Received GOAWAY"
09-01 19:24:47.662 10707 10801 W qt.network.http2: 19:24:47.662 warning unknown'0 stream 7 finished with error: ""
09-01 19:24:47.662 10707 10792 I default : 19:24:47.662 info unknown'0 Network error: QNetworkReply::NoError "Unknown error"
09-01 19:24:47.662 10707 10792 W default : 19:24:47.663 warning unknown'0 Retry on unknown error
I did not see this behavior on Qt6.8.3
I don't know exactly when this occurs. I just occasionally see it happen. It seems wrong to me that I get QNetworkReply::NoError as error code in QNetworkReply::errorOccurred. I would expect QNetworkReply::RemoteHostClosedErrorÂ
For Gerrit Dashboard: QTBUG-139692 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
673464,5 | QHttp2Connection GOAWAY overhaul | dev | qt/qtbase | Status: NEW | 0 | 0 |
673463,5 | tst_http2::goaway: Test for expected error | dev | qt/qtbase | Status: MERGED | +2 | +1 |
679990,2 | tst_http2::goaway: Test for expected error | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
680090,2 | tst_http2::goaway: Test for expected error | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
682397,3 | Http2: Relay an error for GOAWAY with NO_ERROR | dev | qt/qtbase | Status: MERGED | +2 | 0 |
682900,5 | Http2: Relay an error for GOAWAY with NO_ERROR | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |